--- a/audio_plugins/_SPARTA_panner_/CMakeLists.txt
+++ b/audio_plugins/_SPARTA_panner_/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 cmake_minimum_required(VERSION 3.15)
 
-project(sparta_ambiBIN VERSION 1.5.0)
+project(sparta_panner VERSION 1.5.7)
 message(STATUS "Configuring ${PROJECT_NAME}")
 
 # juce helper function to create a library, which is configured as a JUCE plugin
@@ -15,7 +15,7 @@ juce_add_plugin(${PROJECT_NAME}
     EDITOR_WANTS_KEYBOARD_FOCUS FALSE           
     COPY_PLUGIN_AFTER_BUILD     TRUE     # Where does this go in Windows + Linux?
     PLUGIN_MANUFACTURER_CODE    LEOM                
-    PLUGIN_CODE                 ABOA                     
+    PLUGIN_CODE                 PANN                     
     FORMATS                     VST      # ( VST AAX Unity VST3 AU AUv3 Standalone )
     PRODUCT_NAME                "${PROJECT_NAME}"
 )   
@@ -26,10 +26,17 @@ juce_generate_juce_header(${PROJECT_NAME})
 # Add plugin source files
 target_sources(${PROJECT_NAME} 
 PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/../resources/ConfigurationHelper.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/PluginEditor.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/PluginProcessor.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/PluginEditor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/PluginProcessor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/pannerView.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/pannerView.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/inputCoordsView.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/inputCoordsView.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/outputCoordsView.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/outputCoordsView.cpp
 )
 
 # Add any extra JUCE-specific pre-processor definitions
@@ -44,12 +51,12 @@ PUBLIC
 # Link with saf, and the required juce modules
 target_link_libraries(${PROJECT_NAME} 
 PRIVATE 
-    saf saf_example_ambi_bin
+    saf saf_example_panner
     juce::juce_recommended_config_flags
     juce::juce_recommended_lto_flags
     juce::juce_recommended_warning_flags
     juce::juce_audio_plugin_client
     juce::juce_audio_utils
     juce::juce_opengl
-    juce::juce_osc
+    juce::juce_graphics
 )
