--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,29 @@ if (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
     set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
 endif()
 
+# Configure CMake
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_STANDARD_REQUIRED OFF)
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_EXPORT_COMPILE_COMMANDS true)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
+# Platform specific flags and definitions
+if(MSVC)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /MP")
+elseif(APPLE)
+    SET(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++") 
+elseif(UNIX AND NOT APPLE AND NOT ANDROID)
+    add_definitions(
+        #-std=c++11
+        -DLINUX=1   
+    )
+endif()
+
 # Disable JUCE extras and examples:
 option(JUCE_BUILD_EXTRAS   "Build JUCE Extras"   OFF)
 option(JUCE_BUILD_EXAMPLES "Build JUCE Examples" OFF)
