--- a/audio_plugins/CMakeLists.txt
+++ b/audio_plugins/CMakeLists.txt
@@ -7,8 +7,9 @@ add_subdirectory(_SPARTA_ambiDRC_)
 add_subdirectory(_SPARTA_ambiENC_)
 add_subdirectory(_SPARTA_array2sh_)
 add_subdirectory(_SPARTA_beamformer_)
-add_subdirectory(_SPARTA_MatrixConv_)
-add_subdirectory(_SPARTA_MultiConv_)
+add_subdirectory(_SPARTA_decorrelator_)
+add_subdirectory(_SPARTA_matrixConv_)
+add_subdirectory(_SPARTA_multiConv_)
 add_subdirectory(_SPARTA_panner_)
 add_subdirectory(_SPARTA_pitchShifter_)
 add_subdirectory(_SPARTA_rotator_)
