--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,9 @@
 [submodule "SDKs/Spatial_Audio_Framework"]
 	path = SDKs/Spatial_Audio_Framework
-	url = https://github.com/leomccormack/Spatial_Audio_Framework.git
+	url = https://github.com/leomccormack/Spatial_Audio_Framework
+	branch = master
 [submodule "SDKs/JUCE"]
 	path = SDKs/JUCE
 	url = https://github.com/juce-framework/JUCE.git
-	shallow = true
+	ignore = all
+        shallow = true
