minor changes to cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ if(MSVC)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /MP")
 elseif(APPLE)
     set(CMAKE_OSX_DEPLOYMENT_TARGET "10.10" CACHE STRING "Minimum OS X deployment version" FORCE)
-    set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++ -Wno-inconsistent-missing-override") 
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++ -Wall -Wextra -Wno-inconsistent-missing-override")  
 elseif(UNIX AND NOT APPLE AND NOT ANDROID)
     add_definitions(
         #-std=c++11
