--- a/audio_plugins/CMakeLists.txt
+++ b/audio_plugins/CMakeLists.txt
@@ -16,7 +16,7 @@ add_subdirectory(_SPARTA_pitchShifter_)
 add_subdirectory(_SPARTA_rotator_)
 
 # These plug-ins rely on the JUCE CameraDevice, which is sadly not implemented for Linux users:
-if(NOT UNIX OR APPLE) 
+if(NOT UNIX OR APPLE)
     add_subdirectory(_SPARTA_dirass_)
     add_subdirectory(_SPARTA_powermap_)
     add_subdirectory(_SPARTA_sldoa_)
@@ -30,6 +30,7 @@ if(SAF_ENABLE_SOFA_READER_MODULE)
     add_subdirectory(_SPARTA_ambiDEC_)
     add_subdirectory(_SPARTA_binauraliser_)
     add_subdirectory(_SPARTA_spreader_)
+    add_subdirectory(_SPARTA_binauraliser_nf_)
 else()
     message(STATUS "  Note: disabling the plug-ins which rely on the saf_sofa_reader module.")
 endif()
