--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "SDKs/Spatial_Audio_Framework"]
 	path = SDKs/Spatial_Audio_Framework
-	url = https://github.com/rapolasd/Spatial_Audio_Framework
-	branch = tv-convolver
+	url = https://github.com/leomccormack/Spatial_Audio_Framework
+	branch = master
 [submodule "SDKs/JUCE"]
 	path = SDKs/JUCE
 	url = https://github.com/juce-framework/JUCE.git
