--- a/audio_plugins/CMakeLists.txt
+++ b/audio_plugins/CMakeLists.txt
@@ -31,6 +31,7 @@ if(SAF_ENABLE_SOFA_READER_MODULE)
     add_subdirectory(_SPARTA_binauraliser_)
     add_subdirectory(_SPARTA_spreader_)
     add_subdirectory(_SPARTA_binauraliser_nf_)
+    add_subdirectory(_SPARTA_6DoFconv_)
 else()
     message(STATUS "  Note: disabling the plug-ins which rely on the saf_sofa_reader module.")
 endif()
