Use ssh in git submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "SDKs/Spatial_Audio_Framework"]
 	path = SDKs/Spatial_Audio_Framework
-	url = https://github.com/leomccormack/Spatial_Audio_Framework
+	url = git@github.com:leomccormack/Spatial_Audio_Framework
 	branch = master
 [submodule "SDKs/JUCE"]
 	path = SDKs/JUCE
-	url = https://github.com/juce-framework/JUCE.git
+	url = git@github.com:juce-framework/JUCE.git
 	shallow = true
