--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "SDKs/Spatial_Audio_Framework"]
 	path = SDKs/Spatial_Audio_Framework
-	url = https://github.com/leomccormack/Spatial_Audio_Framework
+	url = https://github.com/MarcoBin/Spatial_Audio_Framework_Unipr.git
 	branch = master
 [submodule "SDKs/JUCE"]
 	path = SDKs/JUCE
