--- a/audio_plugins/CMakeLists.txt
+++ b/audio_plugins/CMakeLists.txt
@@ -2,6 +2,22 @@
 # SPARTA Banner:
 message(STATUS "Configuring SPARTA (Version ${PROJECT_VERSION})...")
 
+# Versions to build:
+set(BUILD_PLUGIN_FORMATS "")
+if (BUILD_PLUGIN_FORMAT_VST2)
+    juce_set_vst2_sdk_path(${CMAKE_CURRENT_SOURCE_DIR}/../SDKs/VST2_SDK)
+    list(APPEND BUILD_PLUGIN_FORMATS VST)
+    message("--  Building VST versions")
+endif()
+if (BUILD_PLUGIN_FORMAT_VST3) 
+    list(APPEND BUILD_PLUGIN_FORMATS VST3)
+    message("--  Building VST3 versions")
+endif()
+if (BUILD_PLUGIN_FORMAT_LV2) 
+    list(APPEND BUILD_PLUGIN_FORMATS LV2)
+    message("--  Building LV2 versions")
+endif()
+
 # Add the SPARTA plugins to the build tree
 add_subdirectory(_SPARTA_ambiDRC_)
 add_subdirectory(_SPARTA_ambiENC_)
