--- a/audio_plugins/CMakeLists.txt
+++ b/audio_plugins/CMakeLists.txt
@@ -13,6 +13,10 @@ if (BUILD_PLUGIN_FORMAT_VST3)
     list(APPEND BUILD_PLUGIN_FORMATS VST3)
     message("--  Building VST3 versions")
 endif()
+if (BUILD_PLUGIN_FORMAT_AU) 
+    list(APPEND BUILD_PLUGIN_FORMATS AU)
+    message("--  Building AU versions")
+endif()
 if (BUILD_PLUGIN_FORMAT_LV2) 
     list(APPEND BUILD_PLUGIN_FORMATS LV2)
     message("--  Building LV2 versions")
