--- a/audio_plugins/CMakeLists.txt
+++ b/audio_plugins/CMakeLists.txt
@@ -25,6 +25,10 @@ if (BUILD_PLUGIN_FORMAT_AAX)
     list(APPEND BUILD_PLUGIN_FORMATS AAX)
     message("--  Building AAX versions")
 endif()
+if (BUILD_PLUGIN_FORMAT_STANDALONE) 
+    list(APPEND BUILD_PLUGIN_FORMATS Standalone)
+    message("--  Building Standalone versions")
+endif()
 
 # Add the SPARTA plugins to the build tree
 add_subdirectory(_SPARTA_ambiDRC_)
